@@ -11727,13 +11727,7 @@ static MagickBooleanType WritePNGImage(const ImageInfo *image_info,Image *image)
       mng_info->write_png_depth = 8;
       image->depth = 8;
       image->matte = MagickTrue;
-
-      if (image->matte != MagickFalse)
-        (void) SetImageType(image,TrueColorMatteType);
-
-      else
-        (void) SetImageType(image,TrueColorType);
-
+      (void) SetImageType(image,TrueColorMatteType);
       (void) SyncImage(image);
     }
 
@@ -11742,7 +11736,6 @@ static MagickBooleanType WritePNGImage(const ImageInfo *image_info,Image *image)
       mng_info->write_png_colortype = /* 2 */ 3;
       mng_info->write_png_depth = 16;
       image->depth = 16;
-      image->matte = MagickTrue;
 
       if (image->matte != MagickFalse)
         (void) SetImageType(image,TrueColorMatteType);
@@ -11759,13 +11752,7 @@ static MagickBooleanType WritePNGImage(const ImageInfo *image_info,Image *image)
       mng_info->write_png_depth = 16;
       image->depth = 16;
       image->matte = MagickTrue;
-
-      if (image->matte != MagickFalse)
-        (void) SetImageType(image,TrueColorMatteType);
-
-      else
-        (void) SetImageType(image,TrueColorType);
-
+      (void) SetImageType(image,TrueColorMatteType);
       (void) SyncImage(image);
     }
 
